# transformers-speech-commands

./: .gitignore  00_testing.ipynb  01_dataset_analysis.ipynb  02_baseline_models.ipynb  03_hyperparameter_experiments.ipynb  04_split_unknown_known_experiment.ipynb  05_sampling_experiment.ipynb  NOTES.md  README_WINDOWS.md  analysis.ipynb  analysis_notebook_detailed_description.md  pyproject.toml  sample.ipynb
raport/: main-raport.tex
reports/: notebooks_03_05_findings.md
scripts/: __init__.py  archive.py  check_setup.py  config.py  data.py  models.py  outputs.py  progress.py  runner.py  training.py
